@startuml

class View {
  - JTextArea textArea

  + runUI()
  + showSaveOptions()
  + showFileChooser()
  + showErrorMessage()
  + insertText(text)
  + getText()
}

class Controller {
  - View view
  - Model model

  + initialize()
  + handleEvent()
}

class Model {
  - String currFilePath

  + checkFileStatus()
  + saveToFile(text)
  + setCurrFilePath(path)
  + loadFromFile(path)
}

Controller --> View : interacts with
Controller --> Model : updates / reads
View ..> Controller : sends events

@enduml
